--- a/ChainVisionApp/ChainVisionApp/Views/Home/Products.cshtml
+++ b/ChainVisionApp/ChainVisionApp/Views/Home/Products.cshtml
@@ -2,4 +2,22 @@
     ViewData["Title"] = "Products";
 }
 
-<div>products</div>
+<div class="container-fluid">
+    <div class="title">
+        Products
+    </div>
+</div>
+
+<style>
+    body {
+        background-color: white;
+        font-family: "Poppins", sans-serif;
+    }
+
+    .title{
+        text-align: center;
+        font-size: 2rem;
+        font-weight: 700;
+        margin-top: 1.3rem;
+    }
+</style>
