--- a/ChainVisionApp/ChainVisionApp/Views/Shared/_Layout.cshtml
+++ b/ChainVisionApp/ChainVisionApp/Views/Shared/_Layout.cshtml
@@ -3,29 +3,44 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>@ViewData["Title"] - ChainVisionApp</title>
+    <title>Chain Vision</title>
+    <link href="~/font-awesome/css/all.css" rel="stylesheet" />
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
     <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
     <link rel="stylesheet" href="~/ChainVisionApp.styles.css" asp-append-version="true" />
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Raleway:ital,wght@0,100..900;1,100..900&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
 </head>
 <body>
     <div class="content">
         <nav class="col-md-3 col-lg-2 d-md-block sidebar">
             <div class="greeter">
-                <h1>Welcome</h1>
+                <p>Welcome, User</p>
             </div>
             <ul class="nav flex-column">
                 <li class="nav-item">
                     <a class="nav-link active" aria-current="page" asp-area="" asp-controller="Home" asp-action="Index">
-                        Dashboard
+                        <i class="fa-solid fa-house"></i>&emsp;Dashboard
                     </a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" asp-area="" asp-controller="Home" asp-action="Products">
-                        Products
+                        <i class="fa-solid fa-bread-slice"></i>&emsp;Products
+                    </a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" asp-area="" asp-controller="Home" asp-action="News">
+                        <i class="fa-solid fa-newspaper"></i>&emsp;News
+                    </a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" asp-area="" asp-controller="Home" asp-action="Contact">
+                        <i class="fa-solid fa-address-book"></i>&emsp;Contact
                     </a>
                 </li>
             </ul>
+            <p class="powered">© Powered by FGF Brands 2024</p>
         </nav>
         <main class="col-md-9 col-lg-10 ms-sm-auto px-md-4 body-content">
             <div class="pb-3">
@@ -46,7 +61,7 @@
     }
     .content {
         display: flex;
-        background-color: #06061c;
+        background-color: #7ac142;
         overflow-x: hidden;
     }
 
@@ -60,21 +75,44 @@
         height: 100vh;
         color: white;
         width: 300px;
+        font-family: "Poppins", sans-serif;
     }
-
-    .sidebar .greeter {
-        font-size: 1.5rem;
-        font-weight: bold;
+    .logo{
+        width: 50px;
+    }
+    .greeter {
+        color: #e8e8e8;
         text-align: center;
+        font-weight: 500;
+        padding: 4rem 0;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+    }
+    .greeter i{
+        font-size: 3rem;
+    }
+    .greeter p{
+        font-size: 1.6rem;
+        margin-top: 2rem;
     }
 
     .sidebar .nav-link {
-        color: white;
-        padding: 0.75rem 1rem;
+        color: #e8e8e8;
+        padding: 1rem 2rem;
+        font-weight: 400;
     }
 
     .sidebar .nav-link:hover {
-        background-color: #333366;
+        background-color: #588f2c;
         color: #fff;
+    }
+    .powered {
+        position: absolute;
+        bottom: 0;
+        font-size: 0.9rem;
+        color: #3f6620;
+        padding-left: 1.5rem;
     }
 </style>
