--- a/ChainVisionApp/ChainVisionApp/Views/Home/Index.cshtml
+++ b/ChainVisionApp/ChainVisionApp/Views/Home/Index.cshtml
@@ -3,6 +3,39 @@
 }
 
 <div class="text-center">
-    <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
+    <h1 class="display-4">Dashboard</h1>
+</div>
+
+<div class="d-flex justify-content-center gap-4">
+    <div id="Price" class="box">
+        <canvas id="Price-Chart" width="400" height="200"></canvas>
+    </div>
+    <div id="Inventory" class="box">
+        <canvas id="Inventory-Chart" width="400" height="200"></canvas>
+    </div>
+    <div id="Tariffs" class="box">
+        <canvas id="Tarrif-Chart" width="400" height="200"></canvas>
+    </div>
+</div>
+<div class="container">
+    <div class="pb-3">
+            <h2>Latest News</h2>
+            <div id="news-container" class="news-container">
+                <!-- News items will be added here -->
+                
+                <ul>
+                    <li>Test</li>
+                    <li>Hello</li>
+                </ul>
+            </div>
+    </div>
+    <div>
+        <h2>Alerts</h2>
+            <ul id="Alerts">
+
+            </ul>      
+    </div>
+</div>
+<div>
+    Last Updated: 11/12/2024 22:34
 </div>
