--- a/ChainVisionApp/ChainVisionApp/Views/Home/Index.cshtml
+++ b/ChainVisionApp/ChainVisionApp/Views/Home/Index.cshtml
@@ -3,7 +3,7 @@
 }
 
 <div class="text-center">
-    <h1 class="display-4">Dashboard</h1>
+    <h1 class="Title">Dashboard</h1>
 </div>
 
 <div class="d-flex justify-content-center gap-4">
