--- a/ChainVisionApp/ChainVisionApp/wwwroot/css/site.css
+++ b/ChainVisionApp/ChainVisionApp/wwwroot/css/site.css
@@ -19,15 +19,15 @@ body {
 
 .box {
     border-radius: 8px;
-    height: 200px;
-    width: 29%;
-    margin: 10px;
+    width: 2px;
+    margin: 12px;
     transition: transform 0.3s ease;
 }
 
-.box:hover{
-    transform: scale(1.13);
+.box:hover {
+    /* transform: scale(1.13) 
     border: 2px solid black;
+    */
 }
 
 .news-container {
@@ -73,3 +73,68 @@ body {
     font-weight: 700;
     margin-top: 1.3rem;
 }
+
+/* Button styling */
+button {
+    padding: 10px 20px;
+    font-size: 16px;
+    cursor: pointer;
+    background-color: #4CAF50;
+    color: white;
+    border: none;
+    border-radius: 5px;
+}
+
+button:hover {
+    background-color: #45a049;
+}
+
+.containerMain {
+    display: flex;
+    width: 100%;
+}
+
+.columns-vertical {
+    display: flex;
+    flex-direction: column;
+    padding: 10px;
+}
+
+#columnOne, #columnThree {
+    width: 30%;
+}
+
+#columnTwo {
+    width: 80%;
+    display: flex; 
+    flex-direction: column; 
+    justify-content: center;
+    align-items: center; 
+}
+
+h1.Title {
+    text-align: center; 
+}
+
+button {
+    margin: 5px; 
+    padding: 10px;
+}
+
+#Canvas-box {
+    width: 800px;
+    height: auto;
+}
+
+canvas {
+    width: 100%; 
+    height: auto; 
+    max-height: 500px; 
+    aspect-ratio: 16 / 9; 
+}
+
+h2 {
+    align-items: center;
+    text-align: center;
+}
+
