--- a/ChainVisionApp/ChainVisionApp/Views/Home/Index.cshtml
+++ b/ChainVisionApp/ChainVisionApp/Views/Home/Index.cshtml
@@ -48,8 +48,9 @@ function populateAlerts(alert) {
 }
 
 function populateNews(news) {
-    let newsItem = document.createElement("a");
-    newsItem.innerText = "testing news 121221111111111111111";
+    let newsItem = document.createElement("p");
+    newsItem.innerText = "U.S. Tariffs Affecting Food Prices";
+
     document.getElementById("news-container").appendChild(newsItem);
 }
 
