--- a/ChainVisionApp/ChainVisionApp/Views/Products/Details.cshtml
+++ b/ChainVisionApp/ChainVisionApp/Views/Products/Details.cshtml
@@ -42,7 +42,7 @@
                             <td style="background-color: @news.SeverityRatingColor; font-weight: 600">@news.SeverityRating</td>
                             <td>
                                 <a href="@news.ArticleUrl" target="_blank" class="icon"><i class="fa-solid fa-up-right-from-square"></i></a>
-                                <div onclick="callApiPlaceholder(@news.NewsId)" class="icon"><i class="fa-solid fa-circle-question"></i></div>
+                                <div onclick="callApiPlaceholder(@news.NewsId)" class="icon"><i class="fa-solid fa-user-gear"></i>  </div>
                             </td>
                         </tr>
                     }
@@ -113,7 +113,7 @@
     .fa-up-right-from-square {
         color: #2b3952;
     }
-    .fa-circle-question {
+    .fa-user-gear {
         color: #b89523;
     }
 
