--- a/ChainVisionApp/ChainVisionApp/Views/Home/Index.cshtml
+++ b/ChainVisionApp/ChainVisionApp/Views/Home/Index.cshtml
@@ -4,32 +4,30 @@
 
 <div class="containerMain">
         <div id="columnOne" class="columns-vertical">
-                <div class="pb-3">
-                    <h2>Latest News</h2>
-                    <div id="news-container" class="news-container">
-                        
-                    </div>
-                </div>
-        </div>
-        <div id="columnTwo" class="columns-vertical">
             <div class="d-flex flex-column justify-content-center align-items-center gap-2 mt-4">
                 <h1 class="Title">Dashboard</h1>                    
                 <div id="Canvas-box" class="box" >
-                    <canvas id="Canvas-Main" width="400" height="200"></canvas>
+                    <canvas id="Canvas-Main"></canvas>
                 </div>
             </div>
-            <div class="d-flex justify-content-center gap-2 mt-3">
-                <button id="Price">Price</button>
-                <button id="Inventory">Live Inventory</button>
-                <button id="Tariff">Tariff</button>
+            <div class="d-flex justify-content-center align-items-center gap-2 mt-3">
+                <button id="Price" class="Graph-Switch">Price</button>
+                <button id="Inventory" class="Graph-Switch">Live Inventory</button>
+                <button id="Tariff" class="Graph-Switch">Tariffs</button>
             </div>
         </div>
-        <div id="columnThree" class="columns-vertical">
-                <h2>Alerts</h2>
+        <div id="columnTwo" class="columns-vertical">
+            <h2>Alerts</h2>
                 <ul id="Alerts">
+                
                 </ul>   
         </div>
 </div>
+<footer>
+    <div>
+        Last Updated: 11/12/2024 19:34
+    </div>
+</footer>
 
 <script>
 function timer() {
@@ -45,13 +43,6 @@ function populateAlerts(alert) {
     let alertItem = document.createElement('li');
     alertItem.innerText = alert;
     document.getElementById("Alerts").appendChild(alertItem);
-}
-
-function populateNews(news) {
-    let newsItem = document.createElement("p");
-    newsItem.innerText = "U.S. Tariffs Affecting Food Prices";
-
-    document.getElementById("news-container").appendChild(newsItem);
 }
 
 function populateInventoryGraph() {
@@ -132,7 +123,7 @@ function populatePriceGraph() {
             },
             {
                 label: 'Blue Berries',
-                data: [22,34,21,12,33,22,2,2,22,22,22,22,22],
+                data: [22, 34, 21, 12, 33, 22, 2, 2, 22, 22, 22, 22, 22],
                 backgroundColor: 'blue',
                 borderColor: 'blue',
                 borderWidth: 8
@@ -143,7 +134,7 @@ function populatePriceGraph() {
             plugins: {
                 title: {
                     display: true,
-                    text: 'Price Per Unit',
+                    text: 'High Severity Price Per Unit',
                     font: {
                         size: 15 // Font size for the title
                     },
@@ -229,19 +220,15 @@ document.getElementById("Tariff").addEventListener('click', function () {
 });
 
 window.onload = function () {
-    for (let i = 0; i < 19; i++) {
+    for (let i = 0; i < 50; i++) {
         populateAlerts(i); // TODO put data here
-        if (i % 11 === 0) { //Clear the Alerts every 11 alerts generated
+        if (i % 20 === 0) { //Clear the Alerts every 11 alerts generated
             console.log("called");
             document.getElementById("Alerts").innerHTML = '';
         }
     }
 
-    populateNews();
-
     populatePriceGraph(); // For a default graph on load
 
 }
 </script>
-
-
