--- a/ChainVisionApp/ChainVisionApp/wwwroot/css/site.css
+++ b/ChainVisionApp/ChainVisionApp/wwwroot/css/site.css
@@ -9,8 +9,8 @@ html {
 }
 
 html {
-  position: relative;
-  min-height: 100%;
+    position: relative;
+    min-height: 100%;
 }
 
 body {
@@ -28,12 +28,6 @@ body {
     /* transform: scale(1.13) 
     border: 2px solid black;
     */
-}
-
-.news-container {
-    display: flex;
-    flex-direction: column;
-    gap: 10px;
 }
 
 .news-item {
@@ -69,7 +63,7 @@ body {
 
 .title {
     text-align: center;
-    font-size: 2rem;
+    font-size: 3rem;
     font-weight: 700;
     margin-top: 1.3rem;
 }
@@ -95,8 +89,7 @@ body {
     color: #86cf4c;
 }
 
-/* Button styling */
-button {
+.Graph-Switch {
     padding: 10px 20px;
     font-size: 16px;
     cursor: pointer;
@@ -104,6 +97,7 @@ button {
     color: white;
     border: none;
     border-radius: 5px;
+    margin: 5px;
 }
 
 button:hover {
@@ -119,28 +113,20 @@ button:hover {
     display: flex;
     flex-direction: column;
     padding: 10px;
-}
-
-#columnOne, #columnThree {
-    width: 30%;
-    max-width: 70px;
+    max-height: 600px;
 }
 
 #columnTwo {
-    width: 80%;
-    display: flex; 
-    flex-direction: column; 
+    width: 100%;
+    max-width: 300px;
+}
+
+#columnOne {
+    display: flex;
+    flex-direction: column;
     justify-content: center;
-    align-items: center; 
-}
-
-h1.Title {
-    text-align: center; 
-}
-
-button {
-    margin: 5px; 
-    padding: 10px;
+    align-items: center;
+    max-height: 600px;
 }
 
 #Canvas-box {
